--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
-spring.profiles.active=cliente1
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#ativa o perfil cliente1 no Spring
+#spring.profiles.active=cliente1
 
+#faz o Hibernate exibir os comandos SQL no log de saída do servidor de aplicação
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+#muda as credenciais de acesso ao h2
 spring.datasource.url=jdbc:h2:mem:~/digitalbank
 spring.datasource.username=admin
 spring.datasource.password=admin
